fix: higher z-index of hashy

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -15,6 +15,7 @@
   position: absolute;
   bottom: 42px;
   left: 22px;
+  z-index: 100;
   transition: all cubic-bezier(0.5, -0.3, 0, 2) 2s;
   transform: translateY(60px) scale(0);
   opacity: 0;
